make get task methods global
