# openapi.yml
@@ -249,6 +249,11 @@ paths:
           required: true
           schema:
             type: string
+        - name: author_login
+          in: query
+          required: true
+          schema:
+            type: string
         - name: page_index
           in: query
           required: true
